--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     class="col-md-6 d-flex flex-column align-items-center mt-5 mt-md-0 flex-md-row justify-content-md-end navegacion">
                     <a class="d-block px-2 py-1 fs-6 fw-bold text-uppercase" href="index.html">Inicio</a>
                     <a class="d-block px-2 py-1 fs-6 fw-bold text-uppercase" href="nosotros.html">Nosotros</a>
-                    <a class="d-block px-2 py-1 fs-6 fw-bold text-uppercase" href="blog.html">Blog</a>
+                    <a class="d-block px-2 py-1 fs-6 fw-bold text-uppercase" href="/src/img/Documentacion.pdf">Documentacion</a>
                     <a class="d-block px-2 py-1 fs-6 fw-bold text-uppercase" href="tienda.html">Tienda</a>
                 </nav>
             </div><!--.row-->
@@ -235,10 +235,10 @@
             <nav class="d-flex flex-column flex-md-row align-items-center">
                 <a class="text-white fs-4 me-md-2" href="index.html">Inicio</a>
                 <a class="text-white fs-4 me-md-2" href="nosotros.html">Nosotros</a>
-                <a class="text-white fs-4 me-md-2" href="blog.html">Blog</a>
+                <a class="text-white fs-4 me-md-2" href="src/img/Documentacion.pdf">Documentacion</a>
                 <a class="text-white fs-4 me-md-2" href="tienda.html">Tienda</a>
             </nav>
-            <p class="text-white text-center fs-4 mt-4 m-md-0">Todos los derechos Reservados</p>
+            <p class="text-white text-center fs-4 mt-4 m-md-0">Todos los derechos Reservados De Carmona,Escobar & asociados</p>
         </div>
     </footer>
 </body>
